# facial-expression-classifier

./: .gitignore  Final Project Instructions.docx  README.md  pyproject.toml  requirements.txt
data/: fer2013.yaml
runs/detect/train/: args.yaml  results.csv
runs/detect/train2/: args.yaml  results.csv
runs/detect/train22/: args.yaml  results.csv
runs/detect/train222/: args.yaml  results.csv
runs/detect/train3/: args.yaml  results.csv
runs/detect/train32/: args.yaml  results.csv
runs/detect/train322/: args.yaml  results.csv
runs/detect/train3222/: args.yaml  results.csv
runs/detect/train32222/: args.yaml  results.csv
runs/detect/train4/: args.yaml  results.csv
runs/detect/train42/: args.yaml  results.csv
src/: 01_train_model_augmented.ipynb  facial-expression-classifier.ipynb  verify_config.py  verify_setup.py
src/resnet18/: 02_evaluate_model.ipynb
src/resnet34/: 01_train_model_augmented.ipynb  02_evaluate_model_resnet34.ipynb
